panko/tests/testsuite/snapshots/testsuite__typeck-panko__tests__cases__execute__equality-ops__test_int_unequal.c.snap
---
source: panko/tests/testsuite/main.rs
info:
  program: panko
  args:
    - "--print=typeck"
    - "--stop-after=typeck"
    - panko/tests/cases/execute/equality-ops/test_int_unequal.c
---
success: true
exit_code: 0
----- stdout -----
(translation-unit "panko/tests/cases/execute/equality-ops/test_int_unequal.c"
   (function-definition external
      main~0 `fn() -> int`
      (compound-statement
         (definition a~2 `int` (27 `int`))
         (return (equal `int` (a~2 `int`) (42 `int`))))))

----- stderr -----
